chore: Records and sealed classes sample